chore(client): refactor files

--- a/src/Web/app/pages/index.html
+++ b/src/Web/app/pages/index.html
@@ -21,7 +21,7 @@
             <!-- <div ng-controller="BoardController" ng-repeat="solution in activeSolutions"> -->
             <div ng-controller="q8BoardController as board">
               <div class="chess-table">
-                <div interactive class="board" thing="board"></div>
+                <div interactive class="board" interactiveBoard="board"></div>
               </div>
               <div class="board-actions">
                 <button ng-click="board.requestSolution()" class="btn">Request Solution</button>
