--- a/src/Web/app/pages/index.html
+++ b/src/Web/app/pages/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-board">
           <div class="active-solution">
-            <div ng-controller="q8BoardController as board">
+            <div ng-controller="q8BoardController as board" ng-init="board.solution = queensEight.currentSolution">
               <div class="chess-table">
                 <div interactive class="board" interactive-board="board"></div>
               </div>
